Plumb-thru color space in skia/ext/image_operations.

Copies all the source ImageInfo to the SkBitmap result. Previously,
the color space info was being dropped; probably because this code was
written before Skia had a concept of color space. The new code uses a
simpler API that should be more future-proof. Unit tests were modified
to check that the color space is being plumbed-through.

Bug: 810131
Change-Id: Ibf6dd685731c6fa1f98b1812a70110cf07405e2f
Reviewed-on: https://chromium-review.googlesource.com/c/1352487
Reviewed-by: Mike Klein <mtklein@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611720}
Former-commit-id: 40d67e07e3dd7e4fc134ba57c7c580582a4ab13b